--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,11 @@ bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
 # fix window name after manually changed
-set-option -g allow-rename on
+set-option -g allow-rename off
+
+# start numbering from 1
+set -g base-index 1
+setw -g pane-base-index 1
 
 # status bar
 set -g status-position bottom
