--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,11 @@ set mouse on
 # quick reload
 bind r source-file ~/.tmux.conf; display-message "reloaded!"
 
+# Use the xterm-256color terminal
+set -g default-terminal "xterm-256color"
+# Apply Tc
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 # switch panes using Alt-arrow without prefix
 bind l select-pane -L
 bind h select-pane -R
