--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,10 +4,7 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 #mouse - on!
-set mouse on
-
-# quick reload
-bind r source-file ~/.tmux.conf; display-message "reloaded!"
+set -g mouse on
 
 # Use the xterm-256color terminal
 set -g default-terminal "xterm-256color"
@@ -19,6 +16,9 @@ bind l select-pane -L
 bind h select-pane -R
 bind k select-pane -U
 bind j select-pane -D
+
+# quick reload
+bind r source-file ~/.tmux.conf
 
 # reorder windows
 bind-key -n C-S-Left swap-window -t -1
