--- a/.gitconfig
+++ b/.gitconfig
@@ -6,19 +6,15 @@
 	s = status -sb
     A = add -A
 	c = commit
-	ca = commit -am
+	ca = !git add -A && git commit -m
+	save = !git add -A && git commit -m "WIP"
 	b = branch
 	co = checkout
 	d = diff
-	dc = diff --cached
 	lg = log --graph --decorate --pretty=oneline --abbrev-commit
-	lga = log --graph --decorate --pretty=oneline --abbrev-commit --all
-	ls = ls-files
-	ign = ls-files -o -i --exclude-standard
-
 	unstage = reset HEAD --
 	discard = checkout -- 
-	prev = checkout -
+    wipe = !git add -A && git commit -qm 'WIPE SAVEPOINT' && git reset HEAD~1 --hard
 
 [color]
 	ui = auto
