--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,14 +6,12 @@ bind-key C-a send-prefix
 #mouse - on!
 set -g mouse on
 
-# Use the xterm-256color terminal
 set -g default-terminal "xterm-256color"
 # Apply Tc
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-# switch panes using Alt-arrow without prefix
-bind l select-pane -L
-bind h select-pane -R
+bind l select-pane -R
+bind h select-pane -L
 bind k select-pane -U
 bind j select-pane -D
 
@@ -26,6 +24,7 @@ bind-key -n C-S-Right swap-window -t +1
 
 # fix window name after manually changed
 set-option -g allow-rename off
+set-option -g renumber-windows on
 
 # start numbering from 1
 set -g base-index 1
