--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,9 +6,8 @@ bind-key C-a send-prefix
 #mouse - on!
 set -g mouse on
 
-set -g default-terminal "xterm-256color"
-# Apply Tc
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 bind l select-pane -R
 bind h select-pane -L
@@ -30,25 +29,28 @@ set-option -g renumber-windows on
 set -g base-index 1
 setw -g pane-base-index 1
 
+# vi mode for scrolling and selection
+set-window-option -g mode-keys vi
+
 # status bar
 set -g status-position bottom
-set -g status-bg colour233
-set -g status-fg colour143
-set -g status-attr dim
+set -g status-bg colour16
+set -g status-fg colour231
+set -g status-attr none
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour245,bold] #[fg=colour233,bg=colour249,bold] #(hostname) → #S '
-set -g status-right-length 50
-set -g status-left-length 20
+set -g status-right ' #(hostname) → #S '
+# set -g status-right-length 50
+# set -g status-left-length 20
 
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
+setw -g window-status-current-fg colour51
+setw -g window-status-current-bg colour232
 setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-current-format ' #I:#W#F '
 
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
+setw -g window-status-fg colour231
+setw -g window-status-bg colour232
 setw -g window-status-attr none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+setw -g window-status-format ' #I:#W#F '
 
 setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour255
@@ -56,13 +58,12 @@ setw -g window-status-bell-bg colour1
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
