--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,11 @@ setw -g pane-base-index 1
 # vi mode for scrolling and selection
 set-window-option -g mode-keys vi
 
+# open new windows and panes in the same dir
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 # status bar
 set -g status-position bottom
 set -g status-bg colour16
