--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,6 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-#mouse - on!
 set -g mouse on
 
 # set -g default-terminal "tmux-256color"
@@ -61,14 +60,12 @@ setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour255
 setw -g window-status-bell-bg colour1
 
-# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 
-# Other examples:
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# init plugin manager (keep this line at the very bottom)
 run -b '~/.tmux/plugins/tpm/tpm'
