--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,8 +17,8 @@ bind j select-pane -D
 bind r source-file ~/.tmux.conf
 
 # reorder windows
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
+bind -n C-S-Left swap-window -t -1
+bind -n C-S-Right swap-window -t +1
 
 # fix window name after manually changed
 set-option -g allow-rename off
@@ -66,6 +66,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 # init plugin manager (keep this line at the very bottom)
 run -b '~/.tmux/plugins/tpm/tpm'
