--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,8 +13,22 @@ bind h select-pane -L
 bind k select-pane -U
 bind j select-pane -D
 
-# quick reload
-bind r source-file ~/.tmux.conf
+bind -n M-l select-pane -R
+bind -n M-h select-pane -L
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+
+# switch windows
+bind -n M-0 select-window -t :0
+bind -n M-1 select-window -t :1
+bind -n M-2 select-window -t :2
+bind -n M-3 select-window -t :3
+bind -n M-4 select-window -t :4
+bind -n M-5 select-window -t :5
+bind -n M-6 select-window -t :6
+bind -n M-7 select-window -t :7
+bind -n M-8 select-window -t :8
+bind -n M-9 select-window -t :9
 
 # reorder windows
 bind -n C-S-Left swap-window -t -1
@@ -43,8 +57,6 @@ set -g status-fg colour231
 set -g status-attr none
 set -g status-left ''
 set -g status-right ' #(hostname) → #S '
-# set -g status-right-length 50
-# set -g status-left-length 20
 
 setw -g window-status-current-fg colour51
 setw -g window-status-current-bg colour232
