--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,6 +34,9 @@ bind -n M-9 select-window -t :9
 bind -n C-S-Left swap-window -t -1
 bind -n C-S-Right swap-window -t +1
 
+# no confirmation for killing a pane
+bind-key x kill-pane
+
 # fix window name after manually changed
 set-option -g allow-rename off
 set-option -g renumber-windows on
@@ -72,10 +75,16 @@ setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour255
 setw -g window-status-bell-bg colour1
 
+set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
+
 set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
