--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,33 +55,29 @@ bind c new-window -c "#{pane_current_path}"
 
 # status bar
 set -g status-position bottom
-set -g status-bg colour16
-set -g status-fg colour231
-set -g status-attr none
+set -g status-style fg=colour231,bg=colour16,none
 set -g status-left ''
 set -g status-right ' #(hostname) → #S '
 
-setw -g window-status-current-fg colour51
-setw -g window-status-current-bg colour232
-setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I:#W#F '
+set -g window-status-current-format ' #I:#W#F '
+set -g window-status-current-style fg=colour51,bg=colour232,bold
 
-setw -g window-status-fg colour231
-setw -g window-status-bg colour232
-setw -g window-status-attr none
-setw -g window-status-format ' #I:#W#F '
+set -g window-status-format ' #I:#W#F '
+set -g window-status-style fg=colour231,bg=colour232,none
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+set -g window-status-bell-style fg=colour255,bg=colour1,bold
+
+# ssh agent transfer
+set -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
 
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 
-set -g @plugin 'tmux-plugins/tpm'
+# plugins
 
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
@@ -91,3 +87,4 @@ set -g @plugin 'tmux-plugins/tmux-open'
 
 # init plugin manager (keep this line at the very bottom)
 run -b '~/.tmux/plugins/tpm/tpm'
+
